--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,43 @@
+#==================================
+# = Datasource
+#==================================
+spring.jpa.database=POSTGRESQL
+spring.sql.init.platform=postgres
+#spring.jpa.show-sql=true
+#logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost/catering
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#==================================
+# = Web server
+#==================================
+server.address=127.0.0.1
+server.port=8081
+server.error.whitelabel.enabled=false
+server.error.include-stacktrace=always
+#==================================
+# = Thymeleaf configurations
+#==================================
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.servlet.content-type=text/html
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
+spring.resources.static-locations= file:src/main/resources/static
+spring.resources.cache.period= 0
+server.servlet.context-path=/
+#==================================
+# = Messages configurations
+#==================================
+spring.messages.basename=messages/messages
+spring.messages.encoding=ISO-8859-1
 
+spring.web.resources.static-locations[0]=file:src/main/resources/static/
+spring.web.resources.static-locations[1]=classpath:/static/
